feat: Implement dark mode and theme switching
Introduces a `ThemeProvider` and a `ThemeToggle` component to enable dark mode functionality. This change enhances user experience by allowing users to switch between light and dark themes, improving readability and accessibility across different lighting conditions.

The `index.tsx` now wraps the `App` component with `ThemeProvider`.
The `index.html` and various components (`Header.tsx`, `ImageUploader.tsx`, `StyleSelector.tsx`, `GeneratedImage.tsx`) have been updated with new Tailwind CSS classes to support the dark mode styling and theme transitions.
A `ThemeToggle` component has been added to `App.tsx`.
Global AIStudio interface declarations are now handled in `types.ts`.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 }
 </script>
 </head>
-  <body class="bg-[#0D1117] text-gray-300 font-sans">
+  <body class="bg-gray-50 text-gray-800 dark:bg-[#0D1117] dark:text-gray-300 font-sans transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
